// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  style={
    Object {
      "marginBottom": 36,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <h1
        className="MuiTypography-root-121 MuiTypography-headline-126 MuiTypography-colorTextSecondary-143"
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        Endereço
      </h1>
      <ul
        className="MuiList-root-145 MuiList-padding-146"
      >
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`when address type is "manufacture" renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  style={
    Object {
      "marginBottom": 36,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <h1
        className="MuiTypography-root-121 MuiTypography-headline-126 MuiTypography-colorTextSecondary-143"
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        Endereço
      </h1>
      <ul
        className="MuiList-root-145 MuiList-padding-146"
      >
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`with zip code renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  style={
    Object {
      "marginBottom": 36,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <h1
        className="MuiTypography-root-121 MuiTypography-headline-126 MuiTypography-colorTextSecondary-143"
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        Endereço
      </h1>
      <ul
        className="MuiList-root-145 MuiList-padding-146"
      >
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined - foo-code
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
        <div
          className="MuiButtonBase-root-159 MuiListItem-root-149 MuiListItem-default-152 MuiListItem-gutters-156 MuiListItem-button-157"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="MuiAvatar-root-162 MuiAvatar-colorDefault-163"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-165"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                />
              </g>
            </svg>
          </div>
          <div
            className="MuiListItemText-root-171"
          >
            <h3
              className="MuiTypography-root-121 MuiTypography-subheading-128 MuiListItemText-primary-174"
            >
              undefined
            </h3>
            <p
              className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorTextSecondary-143 MuiListItemText-secondary-175"
            >
              undefined, undefined, undefined
            </p>
          </div>
          <span
            className="MuiTouchRipple-root-177"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`without list renders correctly 1`] = `null`;
